--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ a:focus,
   border: 3px solid black;
 }
 
-#about img:hover {
+#about img {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
 }
